--- a/Images/Images/Views/CustomSectionHeaderView/CustomSectionHeaderView.xib
+++ b/Images/Images/Views/CustomSectionHeaderView/CustomSectionHeaderView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,30 +17,29 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R03-YX-wwm">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="24"/>
-                    <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="16"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="24" id="aXM-kz-4TF"/>
+                        <constraint firstAttribute="height" constant="16" id="aXM-kz-4TF"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCn-LQ-Vqg">
                     <rect key="frame" x="0.0" y="79" width="375" height="1"/>
-                    <color key="backgroundColor" name="knobColor" catalog="System" colorSpace="catalog"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="Dph-L4-g2E"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oK5-H1-avN">
-                    <rect key="frame" x="0.0" y="24" width="375" height="55"/>
+                    <rect key="frame" x="0.0" y="16" width="375" height="63"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Aj-QG-jEY">
-                            <rect key="frame" x="162" y="15.5" width="51" height="24"/>
-                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                            <color key="textColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
+                            <rect key="frame" x="160" y="18.5" width="55" height="26.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.83807416820000002" green="0.8983499693" blue="0.92145264149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="6Aj-QG-jEY" firstAttribute="centerY" secondItem="oK5-H1-avN" secondAttribute="centerY" id="SkQ-aA-esO"/>
                         <constraint firstItem="6Aj-QG-jEY" firstAttribute="centerX" secondItem="oK5-H1-avN" secondAttribute="centerX" id="sag-qC-IfK"/>
