--- a/Images/Images/Storyboards/FavoriteImages.storyboard
+++ b/Images/Images/Storyboards/FavoriteImages.storyboard
@@ -38,7 +38,7 @@
                                                 </imageView>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="0Nr-lf-ZeG">
                                                     <rect key="frame" x="141.5" y="117.5" width="37" height="37"/>
-                                                    <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="0.5076519692" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -66,7 +66,7 @@
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GEQ-fN-Eat">
                                 <rect key="frame" x="16" y="52" width="288" height="32"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.5076519692" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.25132454050000003" green="0.4891528409" blue="0.79842163710000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="odH-HU-1HX"/>
                                 </constraints>
@@ -77,7 +77,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="0.66641695209999996" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="GEQ-fN-Eat" firstAttribute="leading" secondItem="bGP-uN-xVs" secondAttribute="leading" constant="16" id="FvV-rV-DMM"/>
                             <constraint firstItem="tEO-kM-Pw9" firstAttribute="leading" secondItem="bGP-uN-xVs" secondAttribute="leading" id="MZw-a4-TNW"/>
