--- a/Images/Images/Storyboards/GEOLocation.storyboard
+++ b/Images/Images/Storyboards/GEOLocation.storyboard
@@ -18,8 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" mapType="satelliteFlyover" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9VV-sx-sHD" customClass="ImagesMapView" customModule="Images___iOS_Application" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Vjc-b5-Bpy" id="4cu-sO-8RY"/>
+                                </connections>
+                            </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tXS-ee-h39">
                                 <rect key="frame" x="16" y="36" width="100" height="34"/>
+                                <color key="backgroundColor" red="0.25132454050000003" green="0.4891528409" blue="0.79842163710000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="Fa8-mk-WXg"/>
                                 </constraints>
@@ -30,28 +37,26 @@
                                     <action selector="doneButtonTouched:" destination="Vjc-b5-Bpy" eventType="touchUpInside" id="TYb-U6-gBb"/>
                                 </connections>
                             </button>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="satelliteFlyover" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9VV-sx-sHD" customClass="ImagesMapView" customModule="Images___iOS_Application" customModuleProvider="target">
-                                <rect key="frame" x="16" y="86" width="343" height="565"/>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="29U-qK-cc7" firstAttribute="trailing" secondItem="9VV-sx-sHD" secondAttribute="trailing" constant="16" id="6Mb-j9-uUv"/>
+                            <constraint firstItem="9VV-sx-sHD" firstAttribute="top" secondItem="2Dd-A1-60d" secondAttribute="top" id="3gV-5A-vFX"/>
+                            <constraint firstAttribute="trailing" secondItem="9VV-sx-sHD" secondAttribute="trailing" id="6Mb-j9-uUv"/>
                             <constraint firstItem="tXS-ee-h39" firstAttribute="top" secondItem="29U-qK-cc7" secondAttribute="top" constant="16" id="8Qj-W6-H6K"/>
-                            <constraint firstItem="9VV-sx-sHD" firstAttribute="leading" secondItem="29U-qK-cc7" secondAttribute="leading" constant="16" id="9Zy-LC-ajK"/>
-                            <constraint firstItem="9VV-sx-sHD" firstAttribute="top" secondItem="tXS-ee-h39" secondAttribute="bottom" constant="16" id="Z4P-G0-egX"/>
-                            <constraint firstItem="29U-qK-cc7" firstAttribute="bottom" secondItem="9VV-sx-sHD" secondAttribute="bottom" constant="16" id="kr9-tZ-yUX"/>
+                            <constraint firstItem="9VV-sx-sHD" firstAttribute="leading" secondItem="2Dd-A1-60d" secondAttribute="leading" id="9Zy-LC-ajK"/>
+                            <constraint firstItem="9VV-sx-sHD" firstAttribute="bottom" secondItem="2Dd-A1-60d" secondAttribute="bottom" id="kr9-tZ-yUX"/>
                             <constraint firstItem="tXS-ee-h39" firstAttribute="leading" secondItem="29U-qK-cc7" secondAttribute="leading" constant="16" id="pfr-jK-mEf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="29U-qK-cc7"/>
                     </view>
                     <connections>
+                        <outlet property="doneButton" destination="tXS-ee-h39" id="05W-cU-zRh"/>
                         <outlet property="mapView" destination="9VV-sx-sHD" id="iYJ-Yh-grb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AK3-iZ-w0W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-82" y="-334"/>
+            <point key="canvasLocation" x="-82.400000000000006" y="-334.18290854572717"/>
         </scene>
     </scenes>
 </document>
