--- a/Images/Images/Storyboards/SearchImage.storyboard
+++ b/Images/Images/Storyboards/SearchImage.storyboard
@@ -25,14 +25,14 @@
                                 </connections>
                             </mapView>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.20000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="59f-A6-cLA" customClass="SearchTextField" customModule="Images___iOS_Application" customModuleProvider="target">
-                                <rect key="frame" x="16" y="53" width="343" height="32"/>
+                                <rect key="frame" x="16" y="52" width="343" height="32"/>
                                 <color key="backgroundColor" red="0.25132454050000003" green="0.4891528409" blue="0.79842163710000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="uG2-Ox-a44"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="leftViewTintColor">
@@ -46,24 +46,16 @@
                                     <outlet property="delegate" destination="UM2-Hd-PJy" id="wHx-FJ-aiv"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   Images Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1a4-jw-OaQ">
-                                <rect key="frame" x="16" y="28" width="343" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="1a4-jw-OaQ" firstAttribute="top" secondItem="jjQ-G8-C7H" secondAttribute="top" constant="8" id="2az-p8-h1G"/>
+                            <constraint firstItem="59f-A6-cLA" firstAttribute="top" secondItem="jjQ-G8-C7H" secondAttribute="top" constant="32" id="5iu-1H-8IU"/>
+                            <constraint firstItem="59f-A6-cLA" firstAttribute="leading" secondItem="jjQ-G8-C7H" secondAttribute="leading" constant="16" id="9Du-gS-7hI"/>
                             <constraint firstItem="jjQ-G8-C7H" firstAttribute="bottom" secondItem="RDa-t1-S4n" secondAttribute="bottom" id="Cd1-2K-YvQ"/>
-                            <constraint firstItem="59f-A6-cLA" firstAttribute="leading" secondItem="1a4-jw-OaQ" secondAttribute="leading" id="Da0-BV-36t"/>
                             <constraint firstItem="RDa-t1-S4n" firstAttribute="leading" secondItem="lG2-Fx-8G3" secondAttribute="leading" id="Eh7-Gp-aPo"/>
-                            <constraint firstItem="59f-A6-cLA" firstAttribute="trailing" secondItem="1a4-jw-OaQ" secondAttribute="trailing" id="L33-a3-CnK"/>
-                            <constraint firstItem="59f-A6-cLA" firstAttribute="top" secondItem="1a4-jw-OaQ" secondAttribute="bottom" constant="8" id="QdD-9f-lm0"/>
                             <constraint firstAttribute="trailing" secondItem="RDa-t1-S4n" secondAttribute="trailing" id="WP4-iq-02b"/>
-                            <constraint firstItem="jjQ-G8-C7H" firstAttribute="trailing" secondItem="1a4-jw-OaQ" secondAttribute="trailing" constant="16" id="k1d-Ek-LZf"/>
                             <constraint firstItem="RDa-t1-S4n" firstAttribute="top" secondItem="lG2-Fx-8G3" secondAttribute="top" id="kYn-MY-cjC"/>
-                            <constraint firstItem="1a4-jw-OaQ" firstAttribute="leading" secondItem="jjQ-G8-C7H" secondAttribute="leading" constant="16" id="xMs-lt-vHL"/>
+                            <constraint firstItem="jjQ-G8-C7H" firstAttribute="trailing" secondItem="59f-A6-cLA" secondAttribute="trailing" constant="16" id="q3e-SI-seS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jjQ-G8-C7H"/>
                     </view>
